--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,13 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
 
 * {
+  animation: none !important;
+  transition: none !important;
+}
+
+
+
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -11,7 +18,7 @@
   outline: none;
   border: none;
   text-transform: capitalize;
-  /* transition: all 0.2s linear; */
+  transition: all 0.2s linear;
 }
 html {
   font-size: 62.5%;
