--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@
   outline: none;
   border: none;
   text-transform: capitalize;
-  transition: all 0.2s linear;
+  transition: none;
 }
 html {
   font-size: 62.5%;
